# loop-shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: game.c
